<resources>
    <string name="app_name">Dealse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="str_get_started">Get started</string>

    <string name="str_next">Next</string>
    <string name="str_skip">Skip</string>
    <string name="str_buy">BUY</string>
    <string name="str_buy_clothes">Buy Clothes and many more from This brand new online store</string>
    <string name="redeem_your_coupons">Redeem Your Coupons</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>

    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">just now</string>
    <string name="time_ago_minute">minute</string>
    <string name="time_ago_minutes">%d minutes</string>
    <string name="time_ago_hour">hour</string>
    <string name="time_ago_hours">%d hours</string>
    <string name="time_ago_day">a day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_month">month</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_year">year</string>
    <string name="time_ago_years">%d years</string>
    <string name="log_in_your_account">Log In Your Account</string>

    <string name="log_in_into_your_account">Log in into your account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="your_password">Your Password</string>
    <string name="forgot">Forgot?</string>
    <string name="login">Login</string>
    <string name="or_log_in_with">or Log in with</string>
    <string name="or_sign_in_with">or Sign Up With</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_now"><u>Create Now</u></string>
    <string name="str_login">Login</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_register_now">Register Now!</string>
    <string name="str_already_login">Login!</string>
    <string name="str_create_an_account">Create an Account</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="your_name">Your Name</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="categories">Categories</string>
    <string name="limited_time_offer">Limited Time Offer</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="no_record_found">No Record Found</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="personal_details">Personal Details</string>
    <string name="personal_information">Personal Information</string>
    <string name="change_password">Change Password</string>
    <string name="auto_subscription">Auto Subscription</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="app_settings">App Settings</string>
    <string name="permission_settings">Permission Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="privacy_security"><![CDATA[Privacy & Security]]></string>
    <string name="help_and_support">Help And Support</string>
    <string name="about">About</string>
    <string name="my_offer">My Offer</string>
    <string name="account">Account</string>
    <string name="feedback">Feedback</string>
    <string name="information">Information</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="birth_date">Birth Date</string>
    <string name="save">Save</string>
    <string name="redeem_your_coupon">Redeem Your Coupon</string>
    <string name="details_about_offer">Details About Offer</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
</resources>