<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_notifications_setting"
        android:title="@string/setting" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_notifications_more"
        android:title="@string/more" />

</menu>