<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dealse.ui.dashboard.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.dealse.ui.dashboard.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
  <fragment
        android:id="@+id/navigation_setting"
        android:name="com.dealse.ui.dashboard.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
<fragment
        android:id="@+id/navigation_profile"
        android:name="com.dealse.ui.dashboard.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
<fragment
        android:id="@+id/navigation_more"
        android:name="com.dealse.ui.dashboard.more.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" />


</navigation>