<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_information"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_mail_i"
                    />
                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_information"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:alpha="0.60"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/regular"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"

                android:gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_password_key"
                    />
                <TextView
                    android:id="@+id/txtChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:alpha="0.60"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/regular"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"

                android:gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_notification"
                    />
                <TextView
                    android:id="@+id/txtNotification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_subscription"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:alpha="0.60"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/regular"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/txtOn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/on"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/black"
                        android:alpha="0.60"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:fontFamily="@font/regular"
                        />
                    <ImageView
                        android:id="@+id/imgSwitch"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_switch"
                        />

                    <TextView
                        android:id="@+id/txtOff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/off"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/black"
                        android:alpha="0.60"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:fontFamily="@font/regular"
                        />
                </LinearLayout>



            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_settings"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/bold"
                android:layout_marginTop="@dimen/_20sdp"
                />
            <LinearLayout
                android:id="@+id/lPermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"

                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_right"
                    />
                <TextView
                    android:id="@+id/txtPermission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_settings"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:alpha="0.60"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/regular"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lNotificationSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"

                android:gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_right"
                    />
                <TextView
                    android:id="@+id/txtNotificationSe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_settings"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:alpha="0.60"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/regular"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lPrivacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"

                android:gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_right"
                    />
                <TextView
                    android:id="@+id/txtPrivacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_security"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:alpha="0.60"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/regular"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"

                android:gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_right"
                    />
                <TextView
                    android:id="@+id/txtHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_and_support"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:alpha="0.60"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/regular"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"

                android:gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_right"
                    />
                <TextView
                    android:id="@+id/txtA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:alpha="0.60"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/regular"
                    />

            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
